Update 1.939.2 release notes with help system, welcome message, and UI polish
Added three new sections to the 1.939.2 release notes covering changes made later in the session that were not captured in the original release notes file. The Help System section documents the floating help button and organized help dialog. The Welcome Message section documents the styled new-user hint that auto-clears on data entry. The UI / UX section was expanded with the unified header backgrounds, removed double borders, and the tab Add button emoji change.

--- a/release-notes/1.939.2.md
+++ b/release-notes/1.939.2.md
@@ -22,10 +22,27 @@
 - Hint is visible to all users including share link viewers
 - Mobile web has no find bar, so no hint is rendered there
 
+## Help System
+
+- Added a floating help button (? circle, 36px) fixed to the bottom-right corner of the screen, created via JS with inline styles to avoid CSS conflicts with the signed-out auth state
+- Clicking the help button opens a dialog explaining every control in the app, organized into sections: Header Buttons, Table Controls, Tabs, Selection Actions, Cloud Backup, Danger Zone, and Other
+- Section headers are styled with uppercase text, letter-spacing, muted color, and a bottom border to visually separate them from the help text
+- Dialog content is tailored per platform — desktop references "Save + Sync to Cloud" and "Click" while mobile references "Cloud Sync", "Copy Share Link", and "Tap"
+- Dialog always opens scrolled to the top
+- Help button is hidden when signed out and hidden for share link viewers
+
+## Welcome Message
+
+- New users with default columns and a single empty row now see a styled welcome message: a bold "Welcome to Shirt Tracker!" heading with a lighter line directing them to the ? help button
+- The welcome message disappears immediately when the user enters any data into a cell
+
 ## UI / UX
 
 - Restyled the auth loading indicator with Work Sans font, 0.8rem, weight 600, uppercase, wide letter-spacing, muted color, and a loading-pulse keyframes animation (opacity 0.4 to 1.0 on 1.8s ease-in-out loop)
 - Loading text changed from "Loading..." to "LOADING" (the pulse conveys activity without needing an ellipsis)
+- Unified backgrounds across sheet-header, column-toggle-row, tab-bar, and filter-row to the same linear gradient, eliminating the visible color mismatch where the tab bar and filter areas appeared as a separate block from the header
+- Removed border-bottom from sheet-header, column-toggle-row, and tab-bar so the entire top control area reads as one cohesive surface, with only the filter-row retaining its bottom border
+- Changed the tab bar Add button from "+ Add" to use the ➕ plus emoji, matching the existing 🗑️ Delete and ✏️ Edit emoji style
 
 ## Bug Fixes
 
